fix image paths
img

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </nav>
              <div class="logo-center">
                 <a href="#">
-                <img src="/img/logo-korona-1.png" title="Jewelry" alt="Jewelry">
+                <img src="./img/logo-korona-1.png" title="Jewelry" alt="Jewelry">
                 </a>
              </div>
              
@@ -74,7 +74,7 @@
          <div class="about-jewelry-container">
             <!--image-jewelry-->
             <div class="image-jewelry">
-                <img src="/img/Cartier-love-ring-16-270x270.png" alt="Кольцо">
+                <img src="./img/Cartier-love-ring-16-270x270.png" alt="Кольцо">
             </div><!--image-jewelry-->
             
             <!--about-jewelry-->
@@ -127,7 +127,7 @@
            <div class="izdelie-1-row">
               <!--image-collection-1-->
               <div class="image-izdelie-1-row">
-                <img src="/img/golden-ring.png" alt="серьги">
+                <img src="./img/golden-ring.png" alt="серьги">
               </div><!--image-izdelie-1-row-->
               <div class="nazvanie-izdeliya">
                 <p>Кольцо Etincelle de Cartier</p>
@@ -144,7 +144,7 @@
            <div class="izdelie-1-row">
             <!--image-collection-1-->
             <div class="image-izdelie-1-row">
-              <img src="/img/golden-ring-22.png" alt="серьги">
+              <img src="./img/golden-ring-22.png" alt="серьги">
             </div><!--image-izdelie-1-row-->
             <div class="nazvanie-izdeliya">
                 <p>Кольцо Etincelle de Cartier</p>
@@ -161,7 +161,7 @@
           <div class="izdelie-1-row">
             <!--image-collection-1-->
             <div class="image-izdelie-1-row">
-              <img src="/img/golden-ring-2.png" alt="серьги">
+              <img src="./img/golden-ring-2.png" alt="серьги">
             </div><!--image-izdelie-1-row-->
             <div class="nazvanie-izdeliya">
                 <p>Кольцо Etincelle de Cartier</p>
@@ -178,7 +178,7 @@
          <div class="izdelie-1-row">
             <!--image-collection-1-->
             <div class="image-izdelie-1-row">
-              <img src="/img/golden-ring-3.png" alt="серьги">
+              <img src="./img/golden-ring-3.png" alt="серьги">
             </div><!--image-izdelie-1-row-->
             <div class="nazvanie-izdeliya">
                 <p>Кольцо Etincelle de Cartier, малая модель</p>
